FIX : 알림 기능 알림창 수정 및 마이페이지 로드 수정

--- a/src/main/resources/static/css/backUsers.css
+++ b/src/main/resources/static/css/backUsers.css
@@ -302,6 +302,10 @@ a:hover {
     padding: 0;
 }
 
+#upload-image-button:hover {
+    color : #6c757d;
+}
+
 
 /* 수정 및 삭제 버튼 스타일 */
 .edit-delete-buttons{
