--- a/src/main/resources/templates/backUsers.html
+++ b/src/main/resources/templates/backUsers.html
@@ -178,6 +178,7 @@
     // header js 코드 추가
     $(document).ready(function () {
         pageSetting();
+        fetchAndRenderUsers();
 
         // 페이지 로드 시 사용자 정보를 가져와서 알림 데이터를 불러옴
         const token = Cookies.get('Authorization');
@@ -245,15 +246,8 @@
                 // "전체 읽음" 버튼에 이벤트 리스너 연결
                 const button = document.getElementById('markAllReadButton');
                 button.addEventListener('click', function () {
-                    Swal.fire({
-                        icon: "waning",
-                        title: "알림 전체 읽음처리 하시겠습니까?"
-                    }).then((result) => {
-                        if (result.isConfirmed) {
-                            markAllNotificationsAsRead();
-                            window.location.reload();
-                        }
-                    })
+                    markAllNotificationsAsRead();
+                    window.location.reload();
                 });
 
             };
