--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -269,24 +269,32 @@
     if(token){ // 토큰 있을 경우
       window.location.href = `/api/posts/${postId}`;
     } else {
-      Swal.fire({
-        title: '로그인한 사용자만 조회할 수 있습니다.',
-        text: '로그인/회원가입 하러가기',
-        icon: 'warning',
-
-        showCancelButton: true,
-        confirmButtonColor: '#d33',
-        cancelButtonColor: '#3085d6',
-        confirmButtonText: '확인',
-        cancelButtonText: '취소',
-
-        reverseButtons: false, // 버튼 순서 거꾸로
-      }).then(result => {
-        if (result.isConfirmed) { // 만약 모달창에서 confirm 버튼을 눌렀다면
-          window.location.href = '/api/auth/login-page';
-        }
-      });
+      outOfLoginPage();
     }
+  }
+
+  function outOfLoginPage(){
+    Swal.fire({
+      title: '로그인한 사용자만 접근 가능합니다.',
+      text: '로그인/회원가입 하러가기',
+      icon: 'warning',
+
+      showCancelButton: true,
+      confirmButtonColor: '#d33',
+      cancelButtonColor: '#3085d6',
+      confirmButtonText: '확인',
+      cancelButtonText: '취소',
+
+      reverseButtons: false, // 버튼 순서 거꾸로
+    }).then(result => {
+      if (result.isConfirmed) { // 만약 모달창에서 confirm 버튼을 눌렀다면
+        redirectToLoginPage();
+      }
+    });
+    Toast.fire({
+      icon: 'error',
+      title: "로그인 부탁드립니다.",
+    })
   }
 
   // 게시글 생성 버튼 클릭 이벤트 핸들러
