[FIX] 게시판 문제은행 이미지 없이 completed null 값 해결

--- a/src/main/resources/templates/updatePost.html
+++ b/src/main/resources/templates/updatePost.html
@@ -330,6 +330,10 @@
                     completed: completed
                 };
 
+                if(postData.completed == null){
+                    postData.completed = false;
+                }
+
                 Swal.fire({
                     title: "게시글을 수정 하시겠습니까?",
                     text: '게시글을 수정합니다.',
