DOCS : 프로젝트(보드) 설명 추가

--- a/src/main/resources/static/css/board.css
+++ b/src/main/resources/static/css/board.css
@@ -64,8 +64,19 @@ html, body {
     justify-content: center;
 }
 
+.descdate {
+    margin-right: 5px;
+    display: flex;
+    flex-direction: row;
+}
+
+.descdate p {
+    margin: 0;
+    font-size: 15px;
+}
+
 .title1{
-    width: 40%;
+    width: 35%;
     height: 100%;
     font-size: 20px;
     font-weight: bold;
@@ -75,7 +86,7 @@ html, body {
 }
 
 .title2 {
-    width: 60%;
+    width: 65%;
     height: 100%;
     font-size: 20px;
     font-weight: bold;
