--- a/src/main/resources/static/css/chatRoom.css
+++ b/src/main/resources/static/css/chatRoom.css
@@ -22,6 +22,26 @@ html, body {
     align-items: center; /* 세로 가운데 정렬 추가 */
 }
 
+body::-webkit-scrollbar {
+    margin-left: 5px;
+    width: 10px;
+}
+
+body::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+body::-webkit-scrollbar-thumb {
+    border-radius: 2px;
+    background-color: #919191;
+}
+
+body::-webkit-scrollbar-button {
+    width: 0;
+    height: 0;
+}
+
+
 /* 상단 메뉴 */
 .top {
     height: 15vh;
@@ -125,7 +145,7 @@ button {
     background-color: white;
     border: 1px solid #ddd;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    max-height: 550px;
+    max-height: 500px;
     overflow-y: auto;
     display: none;
     z-index: 10;
@@ -252,8 +272,7 @@ a:hover {
 
 /* 채팅 리스트 출력 */
 .bottom-bottom {
-    padding-bottom: 20px;
-    height: 85%;
+    padding-bottom: 5%;
     margin-top: 5%;
     width: 100%;
     display: flex;
