--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -64,6 +64,86 @@
     let id = url.replace("/api/chat/", "");
     var chatRoomId = id;
 
+    var currentPage = 0;       // 현재 페이지
+    var isLoading = false;     // 데이터 로딩 중 플래그
+
+    // 스크롤 이벤트 감지
+    function handleScroll() {
+        var messageArea = document.getElementById("messageArea");
+        if (messageArea.scrollTop === 0 && !isLoading) {
+            loadMessages();
+        }
+    }
+
+    // 스크롤 이벤트 리스너 등록
+    var messageArea = document.getElementById("messageArea");
+    messageArea.addEventListener('scroll', handleScroll);
+
+    // 스크롤로 메세지 데이터 불러오기
+    function loadMessages() {
+        isLoading = true;
+        currentPage++;
+
+        fetch(`/api/chat/messages/${id}` + '?pageNo=' + currentPage, {
+            method: "GET"
+        }).then(function (response) {
+            return response.json();
+        }).then(function (data) {
+            prependChatMessages(data);
+            isLoading = false;
+        }).catch(function (error) {
+            console.log("데이터 로드 중 에러 발생: " + error);
+            isLoading = false;
+        })
+    }
+
+    function prependChatMessages(chatItems) {
+        console.log(chatItems);
+        // 새로운 채팅 메시지를 하나씩 화면의 상단에 추가
+        chatItems.forEach(function (chat) {
+            var messageElement = document.createElement('li');
+            if(chat.type === 'ENTER') {
+                messageElement.classList.add('event-message');
+                var textElement = document.createElement('p');
+                var messageText = document.createTextNode(chat.message);
+                textElement.appendChild(messageText);
+                messageElement.appendChild(textElement);
+            } else if (chat.type === 'LEAVE') {
+                messageElement.classList.add('event-message');
+                chat.content = chat.username + chat.message;
+            } else {
+                var avatarElement = document.createElement('i');
+                var usernameElement = document.createElement('span');
+                var textElement = document.createElement('p');
+                var timeElement = document.createElement('p');
+
+                messageElement.classList.add(chat.username === username ? 'chat-message2' : 'chat-message');
+                if (chat.url != null) {
+                    avatarElement.style['background-image'] = 'url(' + chat.url + ')';
+                    avatarElement.style['background-size'] = 'cover';
+                } else {
+                    avatarElement.style['background-image'] = 'url(https://cdn-icons-png.flaticon.com/128/1864/1864497.png)';
+                    avatarElement.style['background-size'] = 'cover';
+                }
+
+                usernameElement.appendChild(document.createTextNode(chat.nickname));
+                textElement.appendChild(document.createTextNode(chat.message));
+                timeElement.appendChild(document.createTextNode(chatItem.sendTime));
+                messageElement.appendChild(avatarElement);
+                messageElement.appendChild(usernameElement);
+                messageElement.appendChild(textElement);
+                messageElement.appendChild(timeElement);
+
+            } // else
+            var messageList = document.getElementById('messageArea');
+            if (messageList.firstChild) {
+                messageList.insertBefore(messageElement, messageList.firstChild);
+            } else {
+                messageList.appendChild(messageElement);
+            }
+        });
+    }
+
     // 채팅방 뒤로가기
     const goOutBtn = document.getElementById('goOutBtn');
     goOutBtn.addEventListener('click', () => {
@@ -118,18 +198,25 @@
             success: function (data) {
                 if (data != null && data !== "") {
                     var chatting = data;
-
+                    chatting.reverse();
                     chatting.forEach(function (chatItem) {
                         var messageElement = document.createElement('li');
                         if(chatItem.type === 'ENTER') {
                             messageElement.classList.add('event-message');
                             chatItem.content = chatItem.username + chatItem.message;
+                            var textElement = document.createElement('p');
+                            var messageText = document.createTextNode(chatItem.message);
+                            textElement.appendChild(messageText);
+                            messageElement.appendChild(textElement);
                         } else if (chatItem.type === 'LEAVE') {
                             messageElement.classList.add('event-message');
                             chatItem.content = chatItem.username + chatItem.message;
                         } else {
                             var avatarElement = document.createElement('i');
                             var usernameElement = document.createElement('span');
+                            var textElement = document.createElement('p');
+                            var timeElement = document.createElement('p');
+
                             messageElement.classList.add(chatItem.username === username ? 'chat-message2' : 'chat-message');
 
                             if (chatItem.url != null) {
@@ -140,16 +227,14 @@
                                 avatarElement.style['background-size'] = 'cover';
                             }
                             usernameElement.appendChild(document.createTextNode(chatItem.nickname));
+                            var messageText = document.createTextNode(chatItem.message);
+                            textElement.appendChild(messageText);
+                            timeElement.appendChild(document.createTextNode(chatItem.sendTime));
                             messageElement.appendChild(avatarElement);
                             messageElement.appendChild(usernameElement);
+                            messageElement.appendChild(textElement);
+                            messageElement.appendChild(timeElement);
                         }
-
-                        var textElement = document.createElement('p');
-                        var messageText = document.createTextNode(chatItem.message);
-                        textElement.appendChild(messageText);
-
-                        messageElement.appendChild(textElement);
-
                         messageArea.appendChild(messageElement);
                     });
 
