REFACTOR : 메인 페이지에서 채팅/마이/관리자 페이지 미표시 및 폰트 변경

--- a/src/main/resources/static/css/privateChat.css
+++ b/src/main/resources/static/css/privateChat.css
@@ -1,12 +1,12 @@
 @font-face {
-    font-family: 'GangwonState';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/GangwonState.woff2') format('woff2');
+    font-family: 'Dovemayo_gothic';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302@1.1/Dovemayo_gothic.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
 
 * {
-    font-family: 'GangwonState', cursive;
+    font-family: 'Dovemayo_gothic', sans-serif;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
