--- a/src/main/resources/templates/createPost.html
+++ b/src/main/resources/templates/createPost.html
@@ -48,7 +48,9 @@
         <!-- 가운데 코끼리 글씨 및 로고  -->
         <img src="https://cdn-icons-png.flaticon.com/128/1864/1864497.png"
              style="width: 35px; height: 35px; cursor: pointer" onclick="gotoMain()"> <!-- 로고 이미지 추가 -->
-        <div style="text-align: center; cursor:pointer;" onclick="gotoMain()">
+        <div style="text-align: center;
+                    cursor:pointer;
+                    font-size: 35px;" onclick="gotoMain()">
             코끼리
         </div>
     </div>
