--- a/src/main/resources/templates/login-page.html
+++ b/src/main/resources/templates/login-page.html
@@ -43,7 +43,7 @@
             <input id="email-check" type="hidden" name="emailCheck" value="false" style="display:none">
 
             <a href="#" id="sendEmail" style="margin-left: -60%;
-            font-size:14px;" onclick="sendEmail()">이메일 인증번호 보내기</a>
+            font-size:14px;" onclick="sendEmail()">✉️ 이메일 인증번호 보내기</a>
             <div class="modal" style="margin-top:5px; display: none;">
                 <div class="modal-content">
                     <!-- 모달 내용 -->
@@ -54,7 +54,7 @@
             </div>
 
             <input type="password" placeholder="비밀번호" name="password" id="password" class="input"/>
-            <a href="" id="showSignupPwBtn" style="margin-left: -80%; font-size:14px;">비밀번호 보기</a>
+            <a href="" id="showSignupPwBtn" style="margin-left: -75%;font-size: 14px;"> 👀 비밀번호 표시</a>
             <input type="text" placeholder="닉네임" name="nickname" id="nickname" class="input"/>
             <input type="text" placeholder="자기소개" name="introduce" id="introduce" class="input"/>
             <input id="admin-check" type="checkbox" name="admin" onclick="onclickAdmin()" style="margin-top: 10px;">관리자
@@ -71,7 +71,7 @@
             <input type="text" placeholder="아이디" name="loginUsername" id="loginUsername" class="input"/>
             <input type="password" placeholder="비밀번호" name="loginPassword" id="loginPassword"
                    class="input"/>
-            <a href="" id="showLoginPwBtn" style="margin-left: -80%; font-size:14px;">비밀번호 보기</a>
+            <a href="" id="showLoginPwBtn" style="margin-left: -70%;font-size: 16px;">👀 비밀번호 표시</a>
             <button class="btn" onclick="onLogin()">로그인하기</button>
             <button id="login-kakao-btn"
                     onclick="location.href='https://kauth.kakao.com/oauth/authorize?client_id=d7da621a3b256dc1ef5cc2ee72d98307&redirect_uri=https://www.elephantcodingclub.site/api/auth/kakao/callback&response_type=code'">
