DOCS : 채팅방에 유저 리스트 출력

--- a/src/main/resources/static/css/privateChat.css
+++ b/src/main/resources/static/css/privateChat.css
@@ -29,6 +29,42 @@ body {
     height: 100%;
 }
 
+/* 사용자 리스트 */
+.userList {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 90px;
+}
+
+.userImage {
+    width: 30%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.userImage img {
+    display: block;
+    width: 70px;
+    height: 70px;
+    border-radius: 100%;
+}
+
+.userInfo {
+    font-size: 20px;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.userInfo p {
+    margin: 0;
+    text-align: start;
+}
+
 .clearfix:after {
     display: block;
     content: "";
@@ -334,9 +370,18 @@ button.primary {
     }
 }
 
+.goOutClass{
+    display: flex;
+    width: 100%;
+    height: 40px;
+    align-items: center;
+    justify-content: center;
+}
+
 /* 돌아가기 버튼 */
 button.goOut {
     outline: none;
+    width: 50%;
     vertical-align: middle;
     text-decoration: none;
     font-weight: 600;
