--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -11,6 +11,12 @@
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
+  <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" rel="stylesheet">
+  <script crossorigin="anonymous" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+          src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js">
+  </script>
+
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/1864/1864497.png" />
 
   <link rel="stylesheet" type="text/css"  href="/css/chat.css">
@@ -32,7 +38,9 @@
     <div class="chat-header">
       <h2 th:text="${board.title}">Chat</h2>
 
-      <button class="goOut" id = "goOutBtn">뒤로가기</button>
+      <div>
+        <button class="btn btn-light" id = "goOutBtn">뒤로가기</button>
+      </div>
     </div>
 
     <ul id="messageArea">
