REFACTOR : 마이페이지 게시글 이동 코드 수정

--- a/src/main/resources/templates/backUsers.html
+++ b/src/main/resources/templates/backUsers.html
@@ -569,7 +569,7 @@
 
 
                 // 새로운 URL로 이동
-                window.location.href = `/api/posts/${postId}`;
+                window.location.href = `/api/posts/update/${postId}`;
             //     const defaultTitle = checkedPostCheckboxes[0].getAttribute('data-title');
             //     const defaultContent = checkedPostCheckboxes[0].getAttribute('data-content');
             //     const defaultCompleted = checkedPostCheckboxes[0].getAttribute('data-completed') === 'true';
