--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -227,7 +227,6 @@
 <!--    </div>-->
   </div>
 
-  <!--페이징 처리 코드 -->
   <div class="bottomthree">
     <!-- 페이징처리 시작 -->
     <div th:if="${!posts.isEmpty()}">
@@ -239,7 +238,7 @@
           </a>
         </li>
         <li th:each="page: ${#numbers.sequence(0, posts.getTotalPages() -1)}"
-            th:if="${page >= page - 5 and page <= page + 5}"
+            th:if="${page >= posts.getPageable().getPageNumber() - 5 and page <= posts.getPageable().getPageNumber() + 4}"
             class="page-item">
           <a th:text="${page + 1}" class="page-link"
              th:href="@{|?page=${page + 1}|}"
@@ -256,9 +255,6 @@
     </div>
     <!-- 페이징처리 끝 -->
   </div>
-
-
-
 
 
 
