--- a/src/main/resources/templates/backUsers.html
+++ b/src/main/resources/templates/backUsers.html
@@ -249,7 +249,6 @@
                 const button = document.getElementById('markAllReadButton');
                 button.addEventListener('click', function () {
                     markAllNotificationsAsRead();
-                    window.location.reload();
                 });
 
             };
@@ -357,6 +356,8 @@
                         Toast.fire({
                             icon: 'success',
                             title: "전체 읽음 처리 되었습니다!",
+                        }).then(function () {
+                            window.location.reload();
                         })
                     })
                     .fail(function(response) {
