--- a/src/main/resources/templates/searchedPage.html
+++ b/src/main/resources/templates/searchedPage.html
@@ -328,7 +328,6 @@
         const button = document.getElementById('markAllReadButton');
         button.addEventListener('click', function () {
           markAllNotificationsAsRead();
-          window.location.reload();
         });
 
       };
@@ -436,6 +435,8 @@
                   Toast.fire({
                     icon: 'success',
                     title: "전체 읽음 처리 되었습니다!",
+                  }).then(function () {
+                    window.location.reload();
                   })
                 })
                 .fail(function(response) {
