--- a/src/main/resources/templates/updatePost.html
+++ b/src/main/resources/templates/updatePost.html
@@ -473,7 +473,6 @@
                 const button = document.getElementById('markAllReadButton');
                 button.addEventListener('click', function () {
                     markAllNotificationsAsRead();
-                    window.location.reload();
                 });
 
             };
@@ -581,6 +580,8 @@
                         Toast.fire({
                             icon: 'success',
                             title: "전체 읽음 처리 되었습니다!",
+                        }).then(function () {
+                            window.location.reload();
                         })
                     })
                     .fail(function (response) {
