TEST : 테스트 코드 수정

--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -36,7 +36,7 @@
 <div id="chat-page" class="hidden">
   <div class="chat-container">
     <div class="chat-header">
-      <h2 th:text="${board.title}">Chat</h2>
+      <h2 th:text="${title}">Chat</h2>
 
       <div>
         <button class="btn btn-light" id = "goOutBtn">뒤로가기</button>
